<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpenseTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title1">Shopping Assistant</string>
    <string name="main_title2">by Peter Corletto</string>
    <string name="display_options_title2">Displayed by categories</string>
    <string name="add_exp_btn">Add a New Expense</string>
    <string name="view_display_options_btn">Display</string>
    <string name="store_title">Add an Expense Activity</string>
    <string name="view_by_groceries_btn">Display by Grocery Shopping</string>
    <string name="view_by_dine_out_btn">Display by Dine Out</string>
    <string name="view_by_medicine_btn">Display by Medicine</string>
    <string name="view_by_donations_btn">Display by Donations</string>
    <string name="view_by_date_btn">Display by Date</string>
    <string name="view_by_misc_btn">Display by Misc/Other</string>
    <string name="amount_lbl">Enter Expense Amount:\u0020</string>
    <string name="category_lbl">Enter Expense Category:\u0020</string>
    <string name="description_lbl">Enter Expense Description:\u0020</string>
    <string name="grocery_radio_btn">Grocery Shopping</string>
    <string name="dineout_radio_btn">Dine Out</string>
    <string name="gas_radio_btn">Gas</string>
    <string name="medicine_radio_btn">Medicine</string>
    <string name="cosmetics_radio_btn">Cosmetics/Personal Hygiene</string>
    <string name="donations_radio_btn">Donations</string>
    <string name="misc_radio_btn">Misc./Other</string>
    <string name="clear_button">Clear</string>
    <string name="store_expense_btn">Store</string>
    <string name="delete_place_btn">Delete</string>
    <string name="pick_store_spinner_lbl">Pick a store</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_activity_display_grocery">DisplayByGroceryActivity</string>
    <string name="title_activity_display_dine_out">DisplayByDineOutActivity</string>
    <string name="title_activity_display_medicine">DisplayByMedicineActivity</string>
    <string name="title_activity_display_donations">DisplayByDonationsActivity</string>
    <string name="title_activity_display_date">DisplayByDateActivity</string>
    <string name="EXPENSE_LIST">EXPENSE_LIST</string>
    <string name="PLACE_LIST">PLACE_LIST</string>
    <string name="EXPENSE_ID">EXPENSE_ID</string>
    <string name="PLACE_ID">PLACE_ID</string>
    <string name="ROW_NUMBER">ROW_NUMBER</string>
    <string name="ET_PREF_FILE">ET_PREF_FILE</string>
    <string name="no_expense_prompt">There are no expenses to display!</string>
    <string name="no_place_prompt">There are no places to display!</string>
    <string name="return_main_button_label">Main</string>
    <string name="delete_selected_expenses_button">Delete</string>
    <string name="title_activity_display_options">DisplayOptionsActivity</string>
    <string name="title_activity_display_by_date">DisplayByDateActivity</string>
    <string name="total_expense_lbl">Total</string>
    <string name="msg_failed_to_get_picture">Failed to get image</string>
    <string name="lbl_pick_single_image">Select single image</string>
    <string name="lbl_pick_multiple_image">Select multiple images</string>
    <string name="txt_info">Quick sample for selecting images on Android</string>
    <string name="msg_failed_to_get_intent_data">Failed to get intent data</string>
    <string name="select_picture">Select Picture</string>
    <string name="start_camera_btn">camera</string>
    <string name="get_receipt_pic_btn">img gallery</string>
    <string name="store_receipt_pic_btn">insert pic</string>
    <string name="title_activity_display_receipt">DisplayReceiptActivity</string>
    <string name="return_previous_lbl">Previous</string>
    <string name="store_locator_button">NEAREST STORE LOCATOR</string>
    <string name="receipt_tracker_button">EXPENSE TRACKER</string>
    <string name="empty_expense_amount_alert">Please enter an expense amount!</string>
    <string name="empty_description_alert">Please enter a description!</string>
    <string name="empty_category_alert">Please select a category!</string>
    <string name="title_activity_locator">LocatorActivity</string>
    <string name="locator_activity_title">Nearest Store Locator</string>
    <string name="locator_activity_subtitle">Pick the type of store</string>
    <string name="locator_activity_subtitle2">or type it in.\n What are you looking for?</string>
    <string name="map_button_label">MAP</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_mapping">MappingActivity</string>
    <string name="title_activity_google_places">GooglePlacesActivity</string>
    <string name="label_btn_find">Find</string>
    <string name="next_btn_lbl">Next</string>
    <string name="store_name">store_name</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="distance">distance</string>
    <string name="title_activity_store_place">StorePlaceActivity</string>
    <string name="store_place_activity_title">Would you save this place for later?</string>
    <string name="name_address_textview_lbl">Name and address of place</string>
    <string name="distance_label">Distance, in miles, to your current location</string>
    <string name="title_activity_display_place">DisplayPlaceActivity</string>

</resources>
