<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".DisplayOptionsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:text="@string/view_display_options_btn"
        android:textSize="32sp"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/walleticon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView"
        android:textSize="26sp"
        android:gravity="center_horizontal"
        android:text="@string/display_options_title2"/>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:rowCount="3"
        android:columnCount="2"
        android:id="@+id/buttonGrid">

        <Button
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="@string/view_by_date_btn"
            android:id="@+id/displayByDateButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_by_medicine_btn"
            android:id="@+id/displayByMedicineButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp"
            android:layout_row="0"
            android:layout_column="1"/>

        <Button
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:text="@string/view_by_groceries_btn"
            android:id="@+id/displayByGroceryShoppingButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_by_donations_btn"
            android:id="@+id/displayByDonationsButton"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_by_dine_out_btn"
            android:id="@+id/displayByDineOutButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/displayByGroceryShoppingButton"
            android:layout_alignEnd="@+id/displayByGroceryShoppingButton"
            android:layout_row="2"
            android:layout_column="0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_by_misc_btn"
            android:id="@+id/displayByMiscButton"
            android:layout_row="2"
            android:layout_column="1"/>

    </GridLayout>

</RelativeLayout>