<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayout2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/delete_place_btn"
            android:id="@+id/deletePlaceButton"
            android:textSize="12sp"/>

        <Button
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:text="@string/return_previous_lbl"
            android:id="@+id/previousActivityBtn"
            android:textSize="12sp"/>

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/return_main_button_label"
            android:id="@+id/returnMainActivityBtn"/>


    </LinearLayout>


</RelativeLayout>